--- a/xs0910.IdentityServer4/Views/Home/Index.cshtml
+++ b/xs0910.IdentityServer4/Views/Home/Index.cshtml
@@ -1,32 +1,24 @@
-@using System.Diagnostics
+@using IdentityServer4.Extensions
 
 @{
-    var version = FileVersionInfo.GetVersionInfo(typeof(IdentityServer4.Hosting.IdentityServerMiddleware).Assembly.Location).ProductVersion.Split('+').First();
+    string name = null;
+    if (!true.Equals(ViewData["signed-out"]))
+    {
+        name = Context.User?.GetDisplayName();
+    }
 }
 
-<div class="welcome-page">
-    <h1>
-        <img src="~/icon.jpg">
-        Welcome to IdentityServer4
-        <small class="text-muted">(version @version)</small>
-    </h1>
+<div class="container body-container">
+    <div class="jumbotron">
+        <h1>欢迎来到IdentityServer4认证中心!</h1>
+        <p>Welcome to the IdentityServer4 certification center!</p>
 
-    <ul>
-        <li>
-            IdentityServer publishes a
-            <a href="~/.well-known/openid-configuration">discovery document</a>
-            where you can find metadata and links to all the endpoints, key material, etc.
-        </li>
-        <li>
-            Click <a href="~/diagnostics">here</a> to see the claims for your current session.
-        </li>
-        <li>
-            Click <a href="~/grants">here</a> to manage your stored grants.
-        </li>
-        <li>
-            Here are links to the
-            <a href="https://github.com/identityserver/IdentityServer4">source code repository</a>,
-            and <a href="https://github.com/IdentityServer/IdentityServer4/tree/main/samples">ready to use samples</a>.
-        </li>
-    </ul>
+        <p>
+            @if (string.IsNullOrWhiteSpace(name))
+            {
+                <a class="btn btn-primary btn-lg" href="/oauth2/authorize" role="button">Login</a>
+            }
+        </p>
+
+    </div>
 </div>
