--- a/xs0910.IdentityServer4/Views/Shared/_Nav.cshtml
+++ b/xs0910.IdentityServer4/Views/Shared/_Nav.cshtml
@@ -18,16 +18,27 @@
 
         @if (!string.IsNullOrWhiteSpace(name))
         {
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
-                    
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" asp-action="Logout" asp-controller="Account">Logout</a>
-                    </div>
-              </li>
-            </ul>
+            @*<ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
+
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" asp-action="Logout" asp-controller="Account">Logout</a>
+                        </div>
+                  </li>
+                </ul>*@
+
+            <div class="btn-group ml-auto">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    @name <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
+                    <li role="separator" class="dropdown-divider"></li>
+                    <li><a class="btn btn-sm btn-default" href="/Account/Logout">Logout</a></li>
+                </ul>
+            </div>
+            <a class="m-md-1 btn btn-outline-info" href="/Account/Logout" role="button">注销</a>
         }
-    
+
     </nav>
 </div>
