--- a/xs0910.IdentityServer4/Views/Shared/_Nav.cshtml
+++ b/xs0910.IdentityServer4/Views/Shared/_Nav.cshtml
@@ -33,6 +33,8 @@
                     @name <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
+                    <li><a class="btn btn-sm btn-default" href="/UserInfo/Index">User Lists</a></li>
+                    <li><a class="btn btn-sm btn-default" href="/Diagnostics/Index">Diagnostics</a></li>
                     <li role="separator" class="dropdown-divider"></li>
                     <li><a class="btn btn-sm btn-default" href="/Account/Logout">Logout</a></li>
                 </ul>
