--- a/xs0910.IdentityServer4/Views/RoleInfo/Index.cshtml
+++ b/xs0910.IdentityServer4/Views/RoleInfo/Index.cshtml
@@ -1,5 +1,88 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<xs0910.IdentityServer4.Models.ApplicationRole>
 @{
+    ViewData["Title"] = "Users";
+    int index = 0;
+}
+
+<link rel="stylesheet" href="~/css/tip.css" />
+
+<div class="container-fluid">
+    <div class="row">
+        <ul class="breadcrumb col-md-12">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active">角色列表</li>
+        </ul>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="mr-auto">
+                <a class="btn btn-primary" asp-action="Register" asp-route-returnUrl="/roleinfo/register">Register Role</a>
+            </div>
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <table class="table table-striped table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Index</th>
+                    <th scope="col">OrderSort</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">CreateTime</th>
+                    <th scope="col">CreateBy</th>
+                    <th scope="col">Enabled</th>
+                    <th scope="col">System</th>
+                    <th scope="col" width="150px">Operate</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                <tr>
+                    <th scope="row">@(index + 1)</th>
+                    <td>@Html.DisplayFor(modelItem => item.OrderSort)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Description)</td>
+                    <td>@Html.DisplayFor(modelItem => item.CreateTime)</td>
+                    <td>@Html.DisplayFor(modelItem => item.CreateBy)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Enabled)</td>
+                    <td>@Html.DisplayFor(modelItem => item.System)</td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.Id" asp-route-returnUrl="/roleinfo/index" title="Edit" class="btn btn-warning btn-sm">
+                            Edit
+                        </a>
+                        <button type="button" class="btn btn-danger btn-sm viewRole" title="Delete"
+                                data-id="@item.Id" data-toggle="modal" data-target="#DeleteRole">
+                            Delete
+                        </button>
+                    </td>
+                </tr>
+                    index++;
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div class="modal fade" id="DeleteRole" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="myModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">警告</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">确定要删除当前这条记录吗</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default border" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="delRole">删除</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    <script src="~/js/deleteRole.js"></script>
 }
