--- a/xs0910.IdentityServer4/Views/Shared/_Nav.cshtml
+++ b/xs0910.IdentityServer4/Views/Shared/_Nav.cshtml
@@ -35,6 +35,7 @@
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuDivider">
                     <li><a class="btn btn-sm btn-default" href="/UserInfo/Index">User Lists</a></li>
                     <li><a class="btn btn-sm btn-default" href="/RoleInfo/Index">Role Lists</a></li>
+                    <li><a class="btn btn-sm btn-default" href="/Clients/Index">Clients Lists</a></li>
                     <li><a class="btn btn-sm btn-default" href="/Diagnostics/Index">Diagnostics</a></li>
                     <li role="separator" class="dropdown-divider"></li>
                     <li><a class="btn btn-sm btn-default" href="/Account/Logout">Logout</a></li>
