--- a/xs0910.IdentityServer4/Views/Clients/Index.cshtml
+++ b/xs0910.IdentityServer4/Views/Clients/Index.cshtml
@@ -57,8 +57,8 @@
                             <a asp-action="CreateOrEdit" asp-route-id="@item.Id" asp-route-returnUrl="/Clients/Index" title="Edit" class="btn btn-warning btn-sm">
                                 Edit
                             </a>
-                            <button type="button" class="btn btn-danger btn-sm viewUser" title="Delete"
-                                    data-id="@item.Id" data-toggle="modal" data-target="#DeleteUser">
+                            <button type="button" class="btn btn-danger btn-sm viewClient" title="Delete"
+                                    data-id="@item.Id" data-toggle="modal" data-target="#DeleteClient">
                                 Delete
                             </button>
                         </td>
@@ -69,3 +69,26 @@
         </table>
     </div>
 </div>
+
+
+<div class="modal fade" id="DeleteClient" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="myModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">警告</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">确定要删除当前这条记录吗</div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default border" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="delClient">删除</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section scripts{
+    <script src="~/js/deleteClient.js"></script>
+}
